[package]
name = "aether-capabilities"
version.workspace = true
edition.workspace = true
license.workspace = true

# Issue 552 stage 2e: the chassis-cap layer extracted out of
# `aether-substrate`. Hosts the six native chassis capabilities
# (Log, Handle, Io, Net, Audio, Render) plus the `HubBroadcast`
# synthetic actor marker.
#
# Why a separate crate: the load-bearing motivation is that wasm
# components want to address chassis caps via `ctx.send_to::<R>` —
# resolved through `R::NAMESPACE` — without pulling in
# `aether-substrate`'s wasmtime / wgpu / cpal stack. Splitting the
# cap structs and their `Actor` markers off `aether-substrate`
# keeps the wasm-component compile graph small.
#
# Stage 4 (this PR, issue 563) feature-gates everything substrate-
# adjacent under `native` so wasm components can dep with
# `default-features = false` and pick up only the target-agnostic
# Actor / Singleton / HandlesKind markers. The `#[actor]` macro
# emits `NativeActor` + `NativeDispatch` + handler-method impls
# under `#[cfg(not(target_arch = "wasm32"))]`, so the feature gate
# here matches: cfg cleanly elides on wasm regardless of how the
# consumer flips features.

[features]
# Default-on: chassis-target builds get the full cap set with their
# substrate-side runtime impls. Wasm consumers do
# `default-features = false` and opt into per-cap marker features
# (`render` / `audio`) for the caps they typed-send to.
default = ["native"]

# The base substrate runtime + the native deps every cap's runtime and
# its ADR-0090 config layer share. This is the load-bearing split issue
# 2296 establishes (template for #2282–2292): the substrate runtime is no
# longer coupled to the wasm *target* — it is an explicit opt-in feature,
# so a `default-features = false` build yields a cap's transport surface
# (its addressing marker + wire kinds) with none of this.
#
# `tracing` (every cap's runtime logs) + the ADR-0090 config-machinery
# deps (`confique` / `clap` / `dirs`, used by every cap's `#[derive(Config)]`
# layer) live here because they are genuinely shared across all caps'
# runtimes — so a per-cap `<cap>-runtime` feature (e.g. `fs-runtime`) is
# self-contained: its native config compiles on `runtime` alone. `uuid`
# rides here too (shared output-staging helper, ADR-0050). A `native`
# umbrella pulls this transitively (below); the `native → runtime` rename
# (#2290) is sequenced to the capstone.
runtime = [
    "dep:aether-substrate",
    "dep:tracing",
    "dep:uuid",
    "dep:confique",
    "dep:clap",
    "dep:dirs",
]

# fs's runtime layer: the `NativeActor` impl + native config/adapter/
# registry in `fs/runtime.rs`. fs pulls no heavy deps beyond the shared
# `runtime` base, so this just names the per-cap runtime the arc
# (#2282–2292) standardizes on. A `default-features = false` build (no
# `native` ⇒ no `fs-runtime`) gets fs transport-only.
fs-runtime = ["runtime"]

# Pulls every wasm-incompatible dep + the `aether-substrate` runtime the
# native cap impls reference. Always on for chassis. Implies `runtime`
# and every per-cap runtime (so a default build keeps each cap's impl)
# plus the remaining cap-specific heavy deps. Kept (additive) during the
# migration so the workspace stays green; its removal / rename to
# `runtime` is the capstone (#2290).
native = [
    "runtime",
    "fs-runtime",
    "dep:httparse",
    "dep:serde_json",
    "dep:sha2",
    "dep:ureq",
    "dep:url",
    "dep:wasmtime",
]

# Wasm-safe marker layers. Activate from a wasm component that wants to
# address the cap via `ctx.actor::<RenderCapability>().send(&kind)` —
# the feature gates the cap module so its always-on `Actor` /
# `Singleton` / `HandlesKind` impls + wasm-stub `pub struct` are
# reachable, without dragging the GPU / audio native deps in.
# Empty body: the render cap's cast-shaped kinds (`DrawTriangle` /
# `Vertex` / `Camera`) derive `bytemuck::Pod` + `Zeroable`, but `bytemuck`
# is already an unconditional dependency (the always-on `aether.input`
# cast kinds pull it), so a marker-only guest sees the kind types with no
# extra feature wiring.
render = []
# ADR-0121: the audio cap owns its kinds in `audio/kinds.rs`. Its
# cast-shaped triggers (`NoteOn` / `NoteOff` / `SetMasterGain`) are
# `#[repr(C)]` + `Pod`/`Zeroable` and need `bytemuck` (with `derive`),
# but the always-on `aether.input` cast kinds (`UnsubscribeAll`) already
# pull `bytemuck` unconditionally, so this marker is empty like the rest.
audio = []
# ADR-0105 `aether.text` cap marker. CPU-only (no GPU dep) — it composes
# the render texture surface entirely by mail — but gated the same two-
# layer way so a wasm component can address it via
# `ctx.actor::<TextCapability>()` without dragging `fontdue` into the wasm
# graph. Pulls the `render` marker because the text cap receives the
# render-owned `CreateTextureResult` reply kind (ADR-0121) and addresses
# the render texture/quad kinds — both now live in `crate::render`.
text = ["render"]
# ADR-0107 `aether.ui` cap marker. CPU-only — it composes the render
# solid-quad and text surfaces entirely by mail — gated the same two-
# layer way so a wasm component can address it via
# `ctx.actor::<UiCapability>()` without pulling native deps.
ui = ["text"]

# Native impl layers — adds the substrate-side runtime + heavy deps
# atop the marker layer. Chassis bins activate these. Each implies its
# marker layer + `native` so chassis builds still see the full cap.
render-native = ["render", "native", "aether-substrate/render", "dep:wgpu"]
audio-native = ["audio", "native", "dep:cpal", "dep:crossbeam-queue", "dep:hound"]
# `fontdue` rides `text-native` the way `hound` rides `audio-native`:
# the pure-Rust TTF parse + rasterize + horizontal layout the cap runs
# off the hot path. Implies the marker layer + `native`.
text-native = ["text", "native", "render", "dep:fontdue"]
# `ui-native` has no heavy deps — the cap only sends mail to the render
# and text caps. Implies the marker layer + `native` + the two surface
# marker layers the native impl addresses.
ui-native = ["ui", "native", "render", "text"]

[dependencies]
# Always-on: target-agnostic SDK + data layer + kind types. These
# compile fine for `wasm32-unknown-unknown` and carry the markers
# wasm components rely on.
aether-actor = { path = "../aether-actor" }
aether-codec = { path = "../aether-codec" }
aether-data = { path = "../aether-data" }
aether-kinds = { path = "../aether-kinds" }
# ADR-0102: the RPC wire vocabulary + `Call` client + the trace walk
# were extracted to `aether-rpc` (a crate with no native deps). This
# crate re-exports them at their original paths (`rpc::*`,
# `trace_walk::*`) and keeps the substrate-bound `RpcServerCapability`
# next to them. Always-on + target-agnostic — the wire types ride the
# wasm-header build too.
aether-rpc = { path = "../aether-rpc" }
# Issue 1464: the `mat4_apply` first-party transform rebuilds a `Mat4`
# / `Vec4` from the wire `[f32; N]` arrays. Always-on + target-agnostic
# (no_std), so it rides the wasm-header-only build too.
aether-math = { path = "../aether-math" }
serde = { workspace = true, default-features = false, features = ["derive"] }

# Native-only: gated behind the `native` feature so wasm builds
# don't drag in wasmtime / cpal / wgpu transitively.
aether-substrate = { path = "../aether-substrate", optional = true }
bytemuck = { workspace = true, features = ["derive"] }
# ADR-0090 unit g (iamacoffeepot/aether#1264): the `Config` derive
# emits per-cap `*Overlay` structs (`#[derive(clap::Args)]`) next to
# the domain struct, retiring the hand-rolled overlays that used to
# live in `aether-substrate-bundle::cli`. clap rides the `native`
# feature so wasm builds skip it.
clap = { workspace = true, optional = true }
# ADR-0090: typed, layered config resolution. Used by the env-shaped
# `*Layer` structs (e.g. `HttpConfigLayer`) that back each cap's
# `*Config::from_env`. `default-features = false` keeps it env-only —
# no TOML/YAML file parsers until ADR-0090's config-file step.
confique = { workspace = true, optional = true }
dirs = { version = "6", optional = true }
# ADR-0108 §1: the inbound HTTP/1.1 request-line + header parser for the
# `aether.http.server` cap. Pure-Rust, no_std-capable, already a transitive
# dependency; rides the `native` feature so wasm / marker-only builds skip it.
httparse = { version = "1", optional = true }
# JSON request/response bodies for the content-gen provider APIs
# (ADR-0050) — the Anthropic Messages API and the Gemini media APIs.
serde_json = { workspace = true, optional = true }
# ADR-0115 (issue 1953): sha256 content addressing for the hub binary
# store. Rides the `native` feature — the store is native-only (it forks
# `--describe` and reads staged paths), so wasm / marker builds skip it.
sha2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, features = ["std", "attributes"] }
ureq = { version = "3", optional = true, features = ["rustls"] }
url = { version = "2", optional = true }
# `v4` random-name generation for `save://gen/<uuid>.{png,wav}` output
# staging (ADR-0050). `aether-data` pulls `uuid` with `serde`-only
# features for its `Uuid` wire type; the staging helper needs the
# random `v4` constructor, hence a direct dep here (issue 1013 §Side
# findings — direct-dep keeps `aether-data`'s no_std/alloc posture clean).
uuid = { version = "1", optional = true, features = ["v4"] }
# wasmtime is reached for by ComponentHostCapability (issue 603 +
# issue 638 phase 3 rename) — the cap holds the Engine/Linker/Module
# the substrate previously held in its `ControlPlane` struct. Same
# version aether-substrate uses; chassis builds get a single wasmtime
# in the dep tree.
wasmtime = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
crossbeam-queue = { version = "0.3", optional = true }
# ADR-0103 §1: WAV decode for the audio cap's track lane + (future)
# sampled instrument banks. Pure-Rust, small; rides the `audio-native`
# feature so wasm / marker-only builds skip it.
hound = { workspace = true, optional = true }
# ADR-0105 §text: pure-Rust TTF parse + glyph rasterize + horizontal
# layout metrics for the `aether.text` cap. Rides the `text-native`
# feature so wasm / marker-only builds skip it.
fontdue = { version = "0.9", optional = true }

# ADR-0121: the `Kind` derive (now used by the audio cap's owned kinds
# in `audio/kinds.rs`) emits a `cfg(not(target_arch = "wasm32"))`-gated
# `inventory::submit!` per kind, so native builds need `inventory`
# reachable. Wasm guests don't (the derive's gate skips emission).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = { workspace = true }

[dev-dependencies]
aether-data = { path = "../aether-data", features = ["derive"] }

[lints]
workspace = true
