[package]
name = "aether-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

# Schema-driven encode + decode of agent-supplied JSON params against
# `aether_data::SchemaType` descriptors. ADR-0019 made every
# substrate kind hub-encodable from JSON params; this crate is that
# encoder, factored out of the hub so callers outside the supervisor
# (scenario runner, future tooling) can use the same path without
# taking a heavy dep on `aether-substrate-hub`.
#
# ADR-0069 renamed this crate from `aether-params-codec` to
# `aether-codec` — the codec is universal (schema → bytes), not
# specific to mail params, and the next consumer is the prompt-system
# save format.
#
# Pure functions, no hub state, no async. Inputs are
# `serde_json::Value` + `aether_data::SchemaType`; outputs are wire
# bytes the substrate's existing decoders accept.

[lib]
path = "src/lib.rs"

[dependencies]
aether-data = { path = "../aether-data" }
postcard = { workspace = true, features = ["alloc", "heapless-cas"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

[dev-dependencies]
# Round-trip tests in this crate encode JSON params via the schema
# encoder, then decode the bytes back through `bytemuck::cast` (cast
# kinds), `postcard::from_bytes` (postcard kinds), or a `serde`
# deserialize. Decoder tests also reach for concrete kinds (e.g.
# `SubscribeInput`) to assert tagged-id round-trips. Production
# callers don't need any of this — only pulled in for `cargo test`.
aether-kinds = { path = "../aether-kinds" }
aether-data = { path = "../aether-data", features = ["derive"] }
bytemuck = { workspace = true, features = ["derive"] }
# Issue 1561: the schema-driven round-trip property
# (`decode_schema(encode_schema(v)) == v`) over a generated `SchemaType`
# tree + a matching `serde_json::Value`. Dev-only; never in a release build.
proptest.workspace = true

[lints]
workspace = true
