[package]
name = "aether-component"
version.workspace = true
edition.workspace = true

[dependencies]
aether-mail = { path = "../aether-mail" }
# ADR-0030 Phase 2: the init walker auto-subscribes each `K::IS_INPUT`
# kind by mailing `aether.control.subscribe_input` — the SDK needs the
# concrete `InputStream` + `SubscribeInput` types from the substrate's
# control vocabulary to build that mail.
aether-kinds = { path = "../aether-kinds" }
bytemuck = { version = "1", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }

# Examples are standalone wasm cdylibs loaded via the substrate's
# `load_component` control plane. Their dev-deps don't propagate to
# downstream guests that depend on `aether-component` for the SDK.
[dev-dependencies]
aether-kinds = { path = "../aether-kinds" }
bytemuck = { version = "1", features = ["derive"] }

# ADR-0017 (component-to-component reply) smoke pair: caller sends
# `demo.request` to "echoer" and observes the reply.
[[example]]
name = "echoer"
crate-type = ["cdylib"]

[[example]]
name = "caller"
crate-type = ["cdylib"]

# ADR-0021 input subscriptions smoke. Resolves all four substrate input
# kinds and broadcasts a `demo.input_observed` per event so
# `receive_mail` shows the dispatch landing.
[[example]]
name = "input_logger"
crate-type = ["cdylib"]
