[package]
name = "aether-component"
version.workspace = true
edition.workspace = true

[dependencies]
# ADR-0033 attribute macros (`#[handlers]` / `#[handler]` / `#[fallback]`)
# live in `aether-mail-derive` and are re-exported through `aether-mail`'s
# `derive` feature. The SDK forwards them to consumers so they can
# `use aether_component::{handlers, handler, fallback};` alongside the
# rest of the component vocabulary.
aether-mail = { path = "../aether-mail", features = ["derive"] }
# ADR-0030 Phase 2: the init walker auto-subscribes each `K::IS_INPUT`
# kind by mailing `aether.control.subscribe_input` — the SDK needs the
# concrete `InputStream` + `SubscribeInput` types from the substrate's
# control vocabulary to build that mail.
aether-kinds = { path = "../aether-kinds" }
bytemuck = { version = "1", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
# ADR-0040: `DropCtx::save_state_kind` / `PriorState::as_kind` bound
# the typed state path on `serde::Serialize` / `DeserializeOwned`, and
# the framing goes through postcard which is serde-driven end-to-end.
serde = { version = "1", default-features = false, features = ["alloc"] }

# Examples are standalone wasm cdylibs loaded via the substrate's
# `load_component` control plane. Their dev-deps don't propagate to
# downstream guests that depend on `aether-component` for the SDK.
[dev-dependencies]
aether-kinds = { path = "../aether-kinds" }
bytemuck = { version = "1", features = ["derive"] }
# ADR-0040 typed-state roundtrip tests derive `Serialize`/`Deserialize`
# on fixture kinds; pull serde in as a dev-dep so tests don't rely on
# the transitive re-export from aether-mail.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# ADR-0017 (component-to-component reply) smoke pair: caller sends
# `demo.request` to "echoer" and observes the reply.
[[example]]
name = "echoer"
crate-type = ["cdylib"]

[[example]]
name = "caller"
crate-type = ["cdylib"]

# ADR-0021 input subscriptions smoke. Resolves all four substrate input
# kinds and broadcasts a `demo.input_observed` per event so
# `receive_mail` shows the dispatch landing.
[[example]]
name = "input_logger"
crate-type = ["cdylib"]
