[package]
name = "aether-data-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# ADR-0069: tests need the runtime traits + schema vocab + macro
# re-exports, all of which live in `aether-data`.
aether-data = { path = "../aether-data", features = ["derive"] }
# ADR-0033 wire-shape autodetect: the Kind derive emits
# `decode_from_bytes` bodies that bound on either `bytemuck::AnyBitPattern`
# (cast arm) or `serde::de::DeserializeOwned` (postcard arm). Test
# fixtures here mirror real components by satisfying whichever bound
# matches their wire shape.
bytemuck = { version = "1.19", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
# Issue #243: derive(Kind) test fixtures emit `inventory::submit!` on
# native targets; the macro needs `::inventory` reachable in this test
# crate. Tests run native, so unconditional dev-dep is fine — no wasm
# build to skip.
inventory = "0.3"
# Issue 533 PR B: native-actor tests assert HandlesKind<K> impls land
# on chassis cap inherent impls. The trait itself is in aether-actor.
aether-actor = { path = "../aether-actor" }
