[package]
name = "aether-data-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "visit"] }

[dev-dependencies]
aether-data = { path = "../aether-data", features = ["derive"] }
bytemuck = { version = "1.19", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
inventory = "0.3"
trybuild = "1"

[lints]
workspace = true
