[package]
name = "aether-data"
version.workspace = true
edition.workspace = true

[features]
# Re-export `#[derive(Kind)]` and `#[derive(Schema)]` from
# `aether-data-derive`. Off by default so guests that hand-write
# `impl Kind for ...` don't pay the proc-macro compile cost.
derive = ["dep:aether-data-derive"]

[dependencies]
aether-data-derive = { path = "../aether-data-derive", optional = true }
bytemuck = { version = "1.19", features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

# Native-side auto-collection of `#[derive(Kind)]` types into the
# substrate's descriptor list (issue #243). `inventory` requires std
# and does not support `wasm32-unknown-unknown` linkers, so the dep
# is target-gated — wasm guests skip it entirely and the derive's
# `cfg(not(target_arch = "wasm32"))`-gated `submit!` emission is never
# compiled. ADR-0032's wasm `aether.kinds` custom-section path remains
# the wasm-side collection mechanism; this is the native mirror.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = "0.3"
