[package]
name = "aether-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Re-export `#[derive(Kind)]` and `#[derive(Schema)]` from
# `aether-actor-derive` (ADR-0077 / issue 552 stage 0: the kind +
# actor proc-macros consolidated into one crate so the derive home
# matches the SDK home), plus the `#[transform]` attribute macro from
# `aether-data-derive` (ADR-0048 §1: a transform is a pure data-layer
# primitive, so its macro re-exports from the data layer). Off by
# default so guests that hand-write `impl Kind for ...` don't pay the
# proc-macro compile cost.
derive = ["dep:aether-actor-derive", "dep:aether-data-derive"]

[dependencies]
aether-actor-derive = { path = "../aether-actor-derive", optional = true }
aether-data-derive = { path = "../aether-data-derive", optional = true }
bytemuck = { workspace = true, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
# ADR-0070 phase 4 follow-up (ADR-0071 phase 7c): identity types
# `EngineId` / `SessionToken` are UUIDs at the wire boundary. Default
# features off keeps `aether-data` no_std + alloc; the `serde` feature
# wires uuid's serde impls (string for human-readable, bytes for
# binary) so the wrapper newtypes derive Serialize/Deserialize without
# extra plumbing.
uuid = { version = "1", default-features = false, features = ["serde"] }

# Native-side auto-collection of `#[derive(Kind)]` types into the
# substrate's descriptor list (issue #243). `inventory` requires std
# and does not support `wasm32-unknown-unknown` linkers, so the dep
# is target-gated — wasm guests skip it entirely and the derive's
# `cfg(not(target_arch = "wasm32"))`-gated `submit!` emission is never
# compiled. ADR-0032's wasm `aether.kinds` custom-section path remains
# the wasm-side collection mechanism; this is the native mirror.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
inventory = { workspace = true }

[lints]
workspace = true
