[package]
name = "aether-derive"
version.workspace = true
edition.workspace = true

# Engine-wide derive macros that don't fit the actor or data
# categories. The `Config` derive (ADR-0090 unit g, issue 1264)
# collapses a cap's domain struct + confique `*Layer` + clap
# `*Overlay` + `from_layer` mapping into a single `#[derive]`.
# Re-exported from `aether-substrate::Config` so consumers write
# `#[derive(aether_substrate::Config)]`.

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
# trybuild compile-pass / compile-fail fixtures under tests/ui/. Each
# fixture is its own tiny crate; the dev-deps below ride into those.
trybuild = "1"
# The macro emits `::aether_substrate::FromArgvThenEnv`-typed impls, so
# every fixture needs aether-substrate (which itself re-exports the
# derive). `confique` and `clap` are reached for by the macro's emitted
# Layer + Overlay structs. Each fixture brings the deps it needs from
# this set. `default-features = false` strips the `wasm` feature
# (iamacoffeepot/aether#1275) so trybuild fixtures don't cold-compile
# wasmtime per fixture binary — the speedup this issue tracks.
aether-substrate = { path = "../aether-substrate", default-features = false }
aether-derive = { path = "." }
confique = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
