[package]
name = "aether-dsl-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
aether-math = { path = "../aether-math" }
lexpr = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
tracing-subscriber = "0.3"
